trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -378,6 +378,14 @@
                         //console.log("activeCellA0 ", activeCellA0);
                         //inni her teller den hele tiden opp til antallet det er    
                     }  
+
+                    for (let i = 0; i > 7; i++) {
+                        for (let j = 0; j < 9; j++) {
+                        if (newGrid[i][j] === 1) {
+                        activeCellB0++;
+                        //console.log("activeCellA0 ", activeCellA0);
+                        //inni her teller den hele tiden opp til antallet det er    
+                    }  
                 }
             }
                     
@@ -409,11 +417,12 @@
               {nyGain = 0.1}
 
             gainNode.gain.value = nyGain;
-            console.log("faktisk gain nå: ", gainNode.gain.value);
+            //console.log("faktisk gain nå: ", gainNode.gain.value);
 
             //her viser det faktisk antall cells count og ikke teller fra 1-4
             //console.log("activeCellCount: ", activeCellCount);
             console.log("activeCellA0 ", activeCellA0);
+            console.log("activeCellB0 ", activeCellB0);
 
             // skala basert på antall aktive celler
 
@@ -463,8 +472,8 @@
 
             synth.cellX = i;
             synth.cellY = j;
-            console.log("i: ", i);
-            console.log("j: ", j);
+            //console.log("i: ", i);
+            //console.log("j: ", j);
             //console.log("cols: ", cols);
 
 
