--- a/matrix.html
+++ b/matrix.html
@@ -6,7 +6,7 @@
     <title>Dele opp griden i fire ruter og dele opp etter tonalitet. Mengde = Gain</title>
     <style>
         body {
-            background-color: rgba(255, 0, 212, 0.829);
+            background-color: rgba(255, 230, 0, 0.829);
         }
 
         p {
@@ -343,11 +343,13 @@
                         for (let y = -1; y <= 1; y++) {
                             if (i + x >= 0 && i + x < rows && j + y >= 0 && j + y < cols) {
                                 neighbors += grid[i + x][j + y];
-                                console.log(grid);
+                                //console.log(grid);
                             }
                         }
                     }
                     neighbors -= grid[i][j];
+
+                    console.log(grid);
 
                     if (grid[i][j] === 1 && (neighbors < 2 || neighbors > 3)) {
                         newGrid[i][j] = 0;
