trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -457,7 +457,11 @@
 
             // skala basert på område i griden mest celler aktive
 
+            //her er området for å se hvilke steder i griden som er aktive
+
             console.log("grid: ", grid);
+            console.log("grid[i]: ", grid[i]);
+            console.log("grid[j]: ", grid[j]);
 
     
             synth2.frequency.value = currentNote;
