trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -414,13 +414,6 @@
                     } else {
                         cells[i * cols + j].classList.remove('alive');
                     }
-
-                             //   if ((grid[i] < 7) && (grid[j] < 9)) {console.log("A0")} 
-         //   else {console.log("alt annet")}
-
-            console.log("grid: ", grid);
-            console.log("grid[i]: ", grid[i]);
-            console.log("grid[j]: ", grid[j]);
                 });
             });
 
@@ -468,7 +461,12 @@
 
            
 
+         //   if ((grid[i] < 7) && (grid[j] < 9)) {console.log("A0")} 
+         //   else {console.log("alt annet")}
 
+            console.log("grid: ", grid);
+            console.log("grid[0]: ", grid[0]);
+            console.log("grid[1]: ", grid[1]);
 
     
             synth2.frequency.value = currentNote;
