--- a/matrix.html
+++ b/matrix.html
@@ -464,9 +464,13 @@
          //   if ((grid[i] < 7) && (grid[j] < 9)) {console.log("A0")} 
          //   else {console.log("alt annet")}
 
+         for (let i = 0; i < 7; i++) {
+            console.log("grid[i] de 7 første: ", grid[i]);
+                    }
+
             console.log("grid: ", grid);
-            console.log("grid[0]: ", grid[0]);
-            console.log("grid[1]: ", grid[1]);
+          //  console.log("grid[0]: ", grid[0]);
+          //  console.log("grid[1]: ", grid[1]);
 
     
             synth2.frequency.value = currentNote;
