trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -468,7 +468,7 @@
             console.log("grid[i] de 7 første: ", grid[i]);
                     }
 
-            console.log("grid: ", grid);
+            console.log("grid[0][0]: ", grid[0][0]);
           //  console.log("grid[0]: ", grid[0]);
           //  console.log("grid[1]: ", grid[1]);
 
