trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -444,13 +444,13 @@
 
          //   if ((grid[i] < 7) && (grid[j] < 9)) {console.log("A0")} 
          //   else {console.log("alt annet")}
-/*
-         for (let i = 0; i < 7; i++) {
+
+     /*    for (let i = 0; i < 7; i++) {
             for (let j = 0; j < 9; j++) {
                 let content = grid[i][j];
                 activeCellA0 += content;
             }
-                    } /*
+                    } */
 
             console.log("activeCellA0 ", activeCellA0);
           //  console.log("grid[1][0]: ", grid[1][0]);
