trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -445,12 +445,14 @@
          //   if ((grid[i] < 7) && (grid[j] < 9)) {console.log("A0")} 
          //   else {console.log("alt annet")}
 
-     /*    for (let i = 0; i < 7; i++) {
+         //loopen under gjør det mulig å se antall aktive celler i A0-kvadranten
+
+         for (let i = 0; i < 7; i++) {
             for (let j = 0; j < 9; j++) {
                 let content = grid[i][j];
                 activeCellA0 += content;
             }
-                    } */
+                    } 
 
             console.log("activeCellA0 ", activeCellA0);
           //  console.log("grid[1][0]: ", grid[1][0]);
