trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -445,7 +445,9 @@
          //   if ((grid[i] < 7) && (grid[j] < 9)) {console.log("A0")} 
          //   else {console.log("alt annet")}
 
-         //loopen under gjør det mulig å se antall aktive celler i A0-kvadranten
+         //loopen under gjør det mulig å se antall aktive celler i A0-kvadranten. Målet er å lage en algoritme 
+         // som avdekker hvilken kvadrant som har flest aktive celler, og da velger vi skala utifra den som har
+         // mest celler.
 
          for (let i = 0; i < 7; i++) {
             for (let j = 0; j < 9; j++) {
