react to light areas

--- a/matrix.html
+++ b/matrix.html
@@ -6,7 +6,7 @@
     <title>Dele opp griden i fire ruter og dele opp etter tonalitet. Mengde = Gain</title>
     <style>
         body {
-            background-color: rgba(255, 230, 0, 0.829);
+            background-color: rgba(255, 38, 0, 0.829);
         }
 
         p {
@@ -158,6 +158,7 @@
 
                     initPixelGrid();
                     drawFrame(context, videoWidth, videoHeight);
+                    console.log(videoElement);
                 };
             })
             .catch(err => {
