--- a/matrix.html
+++ b/matrix.html
@@ -101,7 +101,8 @@
 
 // gjøre dronen bedre
 // fikse gain-algoritmen
-
+// søke stipender
+// sende mail til oslo kommune
 
         const pixelSize = 32;
         const threshold = 155;
@@ -438,7 +439,7 @@
               {nyGain = 0.1}
 
            // gainNode.gain.value = nyGain;
-            gainNode.gain.value = 0.3;
+            gainNode.gain.value = 0.1;
 
             console.log("faktisk gain nå: ", gainNode.gain.value);
 
@@ -550,7 +551,7 @@ console.log(`Den høyeste verdien er i ${highestCell} med en verdi på ${maxValu
                 sustain: 1.0,
                 release: 0.2
             }
-        }).connect(freeverb);
+        }).connect(gainNode);
             }
 
             const noteIndex = (i) % currentScale.length;
