--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(0, 162, 255, 0.829);
+            background-color: rgba(72, 255, 0, 0.829);
         }
 
         p {
@@ -36,9 +36,9 @@
             height: 480px;
         }
         #label {
-            position: absolute;
+            position: relative;
             top: 0;
-            left: 100px;
+            left: 0;
             font-size: 32px;
             color:rgba(255, 255, 255, 0.829);
         }
