react to light areas

--- a/matrix.html
+++ b/matrix.html
@@ -103,6 +103,8 @@
 // fikse gain-algoritmen
 // søke stipender
 // sende mail til oslo kommune
+// bruke ai til noe
+// tid-parameter
 
         const pixelSize = 32;
         const threshold = 155;
