--- a/ai.html
+++ b/ai.html
@@ -79,7 +79,7 @@
     </div>
 
     <div id="controls">
-        <p id="label"></p>
+        <p id="label">hallo</p>
         <button id="playPause">Play / Pause</button>
         <button id="clear">Clear</button>
         <button id="glider">Draw glider</button>
