react to light areas

--- a/ai.html
+++ b/ai.html
@@ -79,7 +79,7 @@
     </div>
 
     <div id="controls">
-        <p id="label">hallo</p>
+        <p id="label"></p>
         <button id="playPause">Play / Pause</button>
         <button id="clear">Clear</button>
         <button id="glider">Draw glider</button>
@@ -88,6 +88,8 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
+
+
 <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/addons/p5.dom.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/ml5@latest/dist/ml5.min.js"></script>
@@ -420,7 +422,9 @@
           // Classifier Variable
   let classifier;
   // Model URL
-  let imageModelURL = 'https://teachablemachine.withgoogle.com/models/UsGnRu7Ed/';
+  //let imageModelURL = 'https://teachablemachine.withgoogle.com/models/UsGnRu7Ed/';
+  
+  let imageModelURL = 'https://teachablemachine.withgoogle.com/models/MRj0P0XeR/';
   
   // Video
   let video;
