--- a/kladding/aitest2.html
+++ b/kladding/aitest2.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(183, 0, 255, 0.829);
+            background-color: rgba(251, 255, 0, 0.829);
         }
 
         p {
@@ -190,7 +190,7 @@
         const phaser = new Tone.Phaser().connect(gainNode);
         const autoWah = new Tone.AutoWah(50, 6, -30).connect(gainNode);
         const vibrato = new Tone.Vibrato().connect(gainNode);
-       // const freeverb = new Tone.Freeverb().connect(gainNode);
+        const freeverb = new Tone.Freeverb().connect(gainNode);
 
 
         gainNode.gain.value = 0.2;
