--- a/kladding/aitest2.html
+++ b/kladding/aitest2.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(0, 225, 255, 0.829);
+            background-color: rgba(255, 123, 0, 0.829);
         }
 
         p {
@@ -190,7 +190,6 @@
         const phaser = new Tone.Phaser().connect(gainNode);
         const autoWah = new Tone.AutoWah(50, 6, -30).connect(gainNode);
         const vibrato = new Tone.Vibrato().connect(gainNode);
-        const freeverb = new Tone.Freeverb().connect(gainNode);
 
 
         gainNode.gain.value = 0.2;
@@ -207,7 +206,7 @@
                 release: 0.8
             }
         }).connect(phaser);
-
+/*
 
         const synth3 = new Tone.MonoSynth({
             oscillator: {
@@ -219,7 +218,7 @@
                 sustain: 1.0,
                 release: 0.8
             }
-        }).connect(freeverb);
+        }).connect(gainNode); */
 
 
         const gridContainer = document.getElementById('grid');
