react to light areas

--- a/kladding/aitest2.html
+++ b/kladding/aitest2.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(255, 123, 0, 0.829);
+            background-color: rgba(0, 255, 106, 0.829);
         }
 
         p {
@@ -84,6 +84,7 @@
         <button id="clear">Clear</button>
         <button id="glider">Draw glider</button>
         <button id="glider2">Draw glider 2</button>
+        <button type='button' onclick='init()'>Start</button>
         
     </div>
 
