--- a/kladding/aitest2.html
+++ b/kladding/aitest2.html
@@ -519,7 +519,7 @@
         maxPredictions = model.getTotalClasses();
 
         // Convenience function to setup a webcam
-        const flip = true; // whether to flip the webcam
+        const flip = false; // whether to flip the webcam
         const width = 640;
         const height = 480;
         webcam = new tmImage.Webcam(width, height, flip);
