--- a/kladding/aitest2.html
+++ b/kladding/aitest2.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(0, 4, 255, 0.829);
+            background-color: rgba(255, 72, 0, 0.829);
         }
 
         p {
@@ -151,7 +151,85 @@
         navigator.mediaDevices.getUserMedia({ video: true })
             .then(stream => {
                 videoElement.srcObject = stream;
+
+
+                
+
+
+//////// Github AI model ////////////
+
+
+    // More API functions here:
+    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
+
+            // the link to your model provided by Teachable Machine export panel
+            const URL = 'https://teachablemachine.withgoogle.com/models/MRj0P0XeR/';
+
+            let model, labelContainer, maxPredictions;
+
+
+            // Load the image model and setup the webcam
+
+            const modelURL = URL + 'model.json';
+            const metadataURL = URL + 'metadata.json';
+
+            // load the model and metadata
+            // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+            // or files from your local hard drive
+            model = await tmImage.load(modelURL, metadataURL);
+            maxPredictions = model.getTotalClasses();
+// webcam = videoElement
+/*
+            // Convenience function to setup a webcam
+            const flip = false; // whether to flip the webcam
+            const width = 640;
+            const height = 480;
+            webcam = new tmImage.Webcam(width, height, flip);
+            await webcam.setup(); // request access to the webcam */
+
+
+//            document.getElementById("webcam-container").appendChild(webcam.canvas);
+
+            // append elements to the DOM
+            labelContainer = document.getElementById('label-container');
+            for (let i = 0; i < maxPredictions; i++) { // and class labels
+                labelContainer.appendChild(document.createElement('div'));
+            }
+           // webcam.play();
+
+            //////
+
                 videoElement.play();
+
+
+                //////
+
+                window.requestAnimationFrame(loop);
+
+
+async function loop() {
+    videoElement.update(); // update the webcam frame
+    await predict();
+    videoElement.requestAnimationFrame(loop);
+}
+
+// run the webcam image through the image model
+async function predict() {
+    // predict can take in an image, video or canvas html element
+    let prediction;
+
+    prediction = await model.predict(videoElement.canvas);
+
+    for (let i = 0; i < maxPredictions; i++) {
+        const classPrediction =
+            prediction[i].className + ': ' + prediction[i].probability.toFixed(2);
+        labelContainer.childNodes[i].innerHTML = classPrediction;
+    }
+}
+//////// end githob classifyier model /////// 
+
+
+                /////
                 videoElement.onloadedmetadata = () => {
                     const pixelGridCanvas = document.getElementById('pixel-grid');
                     const context = pixelGridCanvas.getContext('2d');
@@ -489,70 +567,6 @@
 
 
 
-
-
-//////// Github AI model ////////////
-
-
-    // More API functions here:
-    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
-
-    // the link to your model provided by Teachable Machine export panel
-    const URL = 'https://teachablemachine.withgoogle.com/models/MRj0P0XeR/';
-
-    let model, webcam, labelContainer, maxPredictions;
-
-
-    // Load the image model and setup the webcam
-    async function init() {
-        const modelURL = URL + 'model.json';
-        const metadataURL = URL + 'metadata.json';
-
-        // load the model and metadata
-        // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
-        // or files from your local hard drive
-        model = await tmImage.load(modelURL, metadataURL);
-        maxPredictions = model.getTotalClasses();
-
-        // Convenience function to setup a webcam
-        const flip = false; // whether to flip the webcam
-        const width = 640;
-        const height = 480;
-        webcam = new tmImage.Webcam(width, height, flip);
-        await webcam.setup(); // request access to the webcam
-
-
-        document.getElementById("webcam-container").appendChild(webcam.canvas);
-
-        // append elements to the DOM
-        labelContainer = document.getElementById('label-container');
-        for (let i = 0; i < maxPredictions; i++) { // and class labels
-            labelContainer.appendChild(document.createElement('div'));
-        }
-        webcam.play();
-        window.requestAnimationFrame(loop);
-    }
-
-    async function loop() {
-        webcam.update(); // update the webcam frame
-        await predict();
-        window.requestAnimationFrame(loop);
-    }
-
-    // run the webcam image through the image model
-    async function predict() {
-        // predict can take in an image, video or canvas html element
-        let prediction;
-
-        prediction = await model.predict(webcam.canvas);
-
-        for (let i = 0; i < maxPredictions; i++) {
-            const classPrediction =
-                prediction[i].className + ': ' + prediction[i].probability.toFixed(2);
-            labelContainer.childNodes[i].innerHTML = classPrediction;
-        }
-    }
-//////// end githob classifyier model /////// 
     </script>
 
 
