--- a/kladding/aitest2.html
+++ b/kladding/aitest2.html
@@ -176,7 +176,7 @@
             // load the model and metadata
             // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
             // or files from your local hard drive
-            model = await tmImage.load(modelURL, metadataURL);
+            model = tmImage.load(modelURL, metadataURL);
             maxPredictions = model.getTotalClasses();
 // webcam = videoElement
 /*
@@ -209,7 +209,7 @@
 
 async function loop() {
     videoElement.update(); // update the webcam frame
-    await predict();
+ predict();
     videoElement.requestAnimationFrame(loop);
 }
 
@@ -218,7 +218,7 @@ async function predict() {
     // predict can take in an image, video or canvas html element
     let prediction;
 
-    prediction = await model.predict(videoElement.canvas);
+    prediction = model.predict(videoElement.canvas);
 
     for (let i = 0; i < maxPredictions; i++) {
         const classPrediction =
