--- a/kladding/aitest2.html
+++ b/kladding/aitest2.html
@@ -97,6 +97,23 @@
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.3/dist/teachablemachine-image.min.js"></script>
 
     <script>
+
+        // the link to your model provided by Teachable Machine export panel
+        const URL = 'https://teachablemachine.withgoogle.com/models/MRj0P0XeR/';
+
+let model, labelContainer, maxPredictions;
+
+
+// Load the image model and setup the webcam
+
+const modelURL = URL + 'model.json';
+const metadataURL = URL + 'metadata.json';
+
+// load the model and metadata
+// Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+// or files from your local hard drive
+model = await tmImage.load(modelURL, metadataURL);
+maxPredictions = model.getTotalClasses();
         const pixelSize = 32;
         const threshold = 155;
         const threshold2 = 156;
@@ -162,22 +179,7 @@
     // More API functions here:
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
-            // the link to your model provided by Teachable Machine export panel
-            const URL = 'https://teachablemachine.withgoogle.com/models/MRj0P0XeR/';
-
-            let model, labelContainer, maxPredictions;
-
-
-            // Load the image model and setup the webcam
-
-            const modelURL = URL + 'model.json';
-            const metadataURL = URL + 'metadata.json';
-
-            // load the model and metadata
-            // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
-            // or files from your local hard drive
-            model = tmImage.load(modelURL, metadataURL);
-            maxPredictions = model.getTotalClasses();
+            
 // webcam = videoElement
 /*
             // Convenience function to setup a webcam
@@ -209,7 +211,7 @@
 
 async function loop() {
     videoElement.update(); // update the webcam frame
- predict();
+    await predict();
     videoElement.requestAnimationFrame(loop);
 }
 
@@ -218,7 +220,7 @@ async function predict() {
     // predict can take in an image, video or canvas html element
     let prediction;
 
-    prediction = model.predict(videoElement.canvas);
+    prediction = await model.predict(videoElement.canvas);
 
     for (let i = 0; i < maxPredictions; i++) {
         const classPrediction =
