--- a/kladding/aitest2.html
+++ b/kladding/aitest2.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(255, 72, 0, 0.829);
+            background-color: rgba(0, 217, 255, 0.829);
         }
 
         p {
@@ -97,6 +97,52 @@
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.3/dist/teachablemachine-image.min.js"></script>
 
     <script>
+
+        //////// Github AI model ////////////
+
+
+    // More API functions here:
+    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
+
+            // the link to your model provided by Teachable Machine export panel
+            const URL = 'https://teachablemachine.withgoogle.com/models/MRj0P0XeR/';
+
+            let model, labelContainer, maxPredictions;
+
+
+            // Load the image model and setup the webcam
+
+            const modelURL = URL + 'model.json';
+            const metadataURL = URL + 'metadata.json';
+
+            // load the model and metadata
+            // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+            // or files from your local hard drive
+            model = await tmImage.load(modelURL, metadataURL);
+            maxPredictions = model.getTotalClasses();
+// webcam = videoElement
+/*
+            // Convenience function to setup a webcam
+            const flip = false; // whether to flip the webcam
+            const width = 640;
+            const height = 480;
+            webcam = new tmImage.Webcam(width, height, flip);
+            await webcam.setup(); // request access to the webcam */
+
+
+//            document.getElementById("webcam-container").appendChild(webcam.canvas);
+
+            // append elements to the DOM
+            labelContainer = document.getElementById('label-container');
+            for (let i = 0; i < maxPredictions; i++) { // and class labels
+                labelContainer.appendChild(document.createElement('div'));
+            }
+           // webcam.play();
+
+
+
+
+
         const pixelSize = 32;
         const threshold = 155;
         const threshold2 = 156;
@@ -494,55 +540,16 @@
   }
 ///////// Classifier Variable   ////////// */
 
-//////// Github AI model ////////////
 
-
-    // More API functions here:
-    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
-
-            // the link to your model provided by Teachable Machine export panel
-            const URL = 'https://teachablemachine.withgoogle.com/models/MRj0P0XeR/';
-
-            let model, labelContainer, maxPredictions;
-
-
-            // Load the image model and setup the webcam
-
-            const modelURL = URL + 'model.json';
-            const metadataURL = URL + 'metadata.json';
-
-            // load the model and metadata
-            // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
-            // or files from your local hard drive
-            model = await tmImage.load(modelURL, metadataURL);
-            maxPredictions = model.getTotalClasses();
-// webcam = videoElement
-/*
-            // Convenience function to setup a webcam
-            const flip = false; // whether to flip the webcam
-            const width = 640;
-            const height = 480;
-            webcam = new tmImage.Webcam(width, height, flip);
-            await webcam.setup(); // request access to the webcam */
-
-
-//            document.getElementById("webcam-container").appendChild(webcam.canvas);
-
-            // append elements to the DOM
-            labelContainer = document.getElementById('label-container');
-            for (let i = 0; i < maxPredictions; i++) { // and class labels
-                labelContainer.appendChild(document.createElement('div'));
-            }
-           // webcam.play();
 
             //////
 
-            videoElement.play();
+           // videoElement.play();
 
 
                 //////
 
-                window.requestAnimationFrame(loop);
+               // window.requestAnimationFrame(loop);
 
 
 async function loop() {
