--- a/matrix.html
+++ b/matrix.html
@@ -104,6 +104,7 @@
 // søke stipender
 // sende mail til oslo kommune
 // bruke ai til noe
+//fikse Aien igjen         
 // tid-parameter
 
         const pixelSize = 32;
