react to light areas

--- a/kladding/aitest2.html
+++ b/kladding/aitest2.html
@@ -212,6 +212,8 @@ async function predict() {
                     pixelGridCanvas.height = videoHeight;
 
                     initPixelGrid();
+
+                    init();
                     drawFrame(context, videoWidth, videoHeight);
                 };
             })
