--- a/kladding/aitest2.html
+++ b/kladding/aitest2.html
@@ -155,13 +155,13 @@
                         ///////
 
             // Load the image model and setup the webcam
-            async function init() {
+            
             const modelURL = URL + 'model.json';
             const metadataURL = URL + 'metadata.json';
 
             // load the model and metadata
 
-            model = await tmImage.load(modelURL, metadataURL);
+            model = tmImage.load(modelURL, metadataURL);
             maxPredictions = model.getTotalClasses();
 
             // append elements to the DOM
@@ -200,20 +200,20 @@
 
 
                 window.requestAnimationFrame(loop);
-        }
+        
 
-async function loop() {
+function loop() {
     videoElement.update(); // update the webcam frame
-    await predict();
+    predict();
     window.requestAnimationFrame(loop);
 }
 
 // run the webcam image through the image model
-async function predict() {
+function predict() {
     // predict can take in an image, video or canvas html element
     let prediction;
 
-    prediction = await model.predict(videoElement.canvas);
+    prediction = model.predict(videoElement.canvas);
 
     for (let i = 0; i < maxPredictions; i++) {
         const classPrediction =
