react to light areas

--- a/kladding/aitest.html
+++ b/kladding/aitest.html
@@ -7,7 +7,10 @@
 <script type="text/javascript">
     // More API functions here:
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
-
+    window.onload = (event) => {
+init();
+  console.log("page is fully loaded");
+};
     // the link to your model provided by Teachable Machine export panel
     const URL = 'https://teachablemachine.withgoogle.com/models/MRj0P0XeR/';
 
