react to light areas

--- a/kladding/aitest3.html
+++ b/kladding/aitest3.html
@@ -194,7 +194,7 @@
         const phaser = new Tone.Phaser().connect(gainNode);
         const autoWah = new Tone.AutoWah(50, 6, -30).connect(gainNode);
         const vibrato = new Tone.Vibrato().connect(gainNode);
-        const freeverb = new Tone.Freeverb().connect(gainNode);
+       // const freeverb = new Tone.Freeverb().connect(gainNode);
 
 
         gainNode.gain.value = 0.2;
@@ -223,7 +223,7 @@
                 sustain: 1.0,
                 release: 0.8
             }
-        }).connect(freeverb);
+        }).connect(gainNode);
 
 
         const gridContainer = document.getElementById('grid');
