--- a/kladding/aitest3.html
+++ b/kladding/aitest3.html
@@ -518,7 +518,7 @@ init();
         maxPredictions = model.getTotalClasses();
 
         // Convenience function to setup a webcam
-        const flip = true; // whether to flip the webcam
+        const flip = false; // whether to flip the webcam
         const width = 640;
         const height = 480;
         webcam = new tmImage.Webcam(width, height, flip);
@@ -542,6 +542,7 @@ init();
         }
         webcam.play();
         window.requestAnimationFrame(loop);
+        webcam.hide();
     }
 
     async function loop() {
