react to light areas

--- a/kladding/aitest3.html
+++ b/kladding/aitest3.html
@@ -542,7 +542,7 @@ init();
         }
         webcam.play();
         window.requestAnimationFrame(loop);
-        webcam.hide();
+        webcam.remove();
     }
 
     async function loop() {
