react to light areas

--- a/kladding/aitest3.html
+++ b/kladding/aitest3.html
@@ -532,9 +532,10 @@ init();
             webCamVideo.muted = "true";
             webCamVideo.style.width = width + 'px';
             webCamVideo.style.height = height + 'px';
-            webCamVideo.hide();
+            
         } else {
-            document.getElementById("webcam-container").appendChild(webcam.canvas);
+            //document.getElementById("webcam-container").appendChild(webcam.canvas);
+            
         }
         // append elements to the DOM
         labelContainer = document.getElementById('label-container');
