react to light areas

--- a/kladding/aitest3.html
+++ b/kladding/aitest3.html
@@ -6,12 +6,13 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(255, 81, 0, 0.829);
+            background-color: rgba(21, 255, 0, 0.829);
         }
 
         p {
              font-family: verdana;
-            font-size: 20px;
+            font-size: 40px;
+            color:rgba(255, 255, 255, 0.829);
         }
         #video-container {
             position: relative;
@@ -73,6 +74,7 @@
 </head>
 <body>
     <div id="video-container">
+        <div id='label-container'></div>
         <canvas id="pixel-grid"></canvas>
         <canvas id="canvas" width="640" height="640"></canvas>
         <div id="grid"></div>
@@ -84,7 +86,7 @@
         <button id="clear">Clear</button>
         <button id="glider">Draw glider</button>
         <button id="glider2">Draw glider 2</button>
-        <div id='label-container'></div>
+        
         
     </div>
 
