--- a/kladding/aitest3.html
+++ b/kladding/aitest3.html
@@ -11,6 +11,11 @@
 
         p {
              font-family: verdana;
+            font-size: 20px;
+        }
+
+        #label-container {
+            font-family: verdana;
             font-size: 40px;
             color:rgba(255, 255, 255, 0.829);
         }
